--- a/rgn2.ipynb
+++ b/rgn2.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +103,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Pytorch Dataloader"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "First construct the dataloader for training the model\n",
     "\n",
@@ -115,33 +128,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "#no_chains = '1' #1-8, number of chains in the protein\n",
-    "#dataset_size = len(bcolz.open(data_path+'proteins_{}.bc'.format(no_chains)))\n",
-    "#mask = np.random.random(dataset_size) < 0.8\n",
-    "#trn_ixs = np.arange(dataset_size)[mask]\n",
-    "#val_ixs = np.arange(dataset_size)[~mask]"
+    "no_chains = '1' #1-8, number of chains in the protein\n",
+    "dataset_size = len(bcolz.open(data_path+'proteins_{}.bc'.format(no_chains)))\n",
+    "mask = np.random.random(dataset_size) < 0.8\n",
+    "trn_ixs = np.arange(dataset_size)[mask]\n",
+    "val_ixs = np.arange(dataset_size)[~mask]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "trn_dataset = ProteinNet(data_path+'train30.bc')\n",
     "val_dataset = ProteinNet(data_path+'validation.bc')\n",
-    "#trn_dataset = ProteinNet(data_path+'train30.bc', '1', encoding=encoding, indices=trn_ixs)\n",
-    "#val_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=val_ixs)"
+    "#trn_dataset = ProteinDataset(data_path+'proteins_1.bc', encoding=encoding, indices=trn_ixs)\n",
+    "#val_dataset = ProteinDataset(data_path+'proteins_1.bc', encoding=encoding, indices=val_ixs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 72,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "trn_data = DataLoader(trn_dataset, batch_size=32, shuffle=True, collate_fn=sequence_collate)\n",
@@ -152,8 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -161,10 +181,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([553, 32, 41]), torch.Size([1659, 32, 3]))\n",
-      "(1, torch.Size([622, 32, 41]), torch.Size([1866, 32, 3]))\n",
-      "(2, torch.Size([749, 32, 41]), torch.Size([2247, 32, 3]))\n",
-      "(3, torch.Size([599, 32, 41]), torch.Size([1797, 32, 3]))\n"
+      "(0, torch.Size([322, 32, 41]), torch.Size([966, 32, 3]))\n",
+      "(1, torch.Size([695, 32, 41]), torch.Size([2085, 32, 3]))\n",
+      "(2, torch.Size([731, 32, 41]), torch.Size([2193, 32, 3]))\n",
+      "(3, torch.Size([450, 32, 41]), torch.Size([1350, 32, 3]))\n"
      ]
     }
    ],
@@ -178,6 +198,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([395, 32])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_batched['mask'].size()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +253,9 @@
     "        \n",
     "        if self.model_type == 'hardtanh':\n",
     "            self.linear1 = nn.Linear(hidden_size*2, 3)\n",
+    "            self.bn1 = nn.BatchNorm1d(3)\n",
     "            self.linear2 = nn.Linear(hidden_size*2, 3)\n",
+    "            self.bn2 = nn.BatchNorm1d(3)\n",
     "            self.hardtanh = nn.Hardtanh()\n",
     "        elif self.model_type == 'alphabet':\n",
     "            u = torch.distributions.Uniform(-3.14, 3.14)\n",
@@ -257,10 +301,11 @@
     "        unpacked = unpacked[:, range(batch_sz)] #reorder to match target\n",
     "\n",
     "        if self.model_type == 'hardtanh':\n",
-    "            sin_out = self.hardtanh(self.linear1(unpacked))\n",
-    "            cos_out = self.hardtanh(self.linear2(unpacked))\n",
+    "            flat = unpacked.view(-1, unpacked.size(2))\n",
+    "            sin_out = self.hardtanh(self.bn1(self.linear1(flat))).view(max_len, batch_sz, 3)\n",
+    "            cos_out = self.hardtanh(self.bn2(self.linear2(flat))).view(max_len, batch_sz, 3)\n",
     "            out = torch.atan2(sin_out, cos_out)\n",
-    "            #out.register_hook(self.save_grad('out'))\n",
+    "            out.register_hook(self.save_grad('out'))\n",
     "        elif self.model_type == 'alphabet':\n",
     "            softmax_out = F.softmax(self.linear(unpacked), dim=2)\n",
     "            sine = torch.matmul(softmax_out, torch.sin(self.alphabet))\n",
@@ -288,17 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([697, 32, 41]), torch.Size([2091, 32, 3]), torch.Size([2091, 32, 3]))\n",
-      "(1, torch.Size([832, 32, 41]), torch.Size([2496, 32, 3]), torch.Size([2496, 32, 3]))\n",
-      "(2, torch.Size([852, 32, 41]), torch.Size([2556, 32, 3]), torch.Size([2556, 32, 3]))\n",
-      "(3, torch.Size([534, 32, 41]), torch.Size([1602, 32, 3]), torch.Size([1602, 32, 3]))\n"
+      "(0, torch.Size([382, 32, 41]), torch.Size([1146, 32, 3]), torch.Size([1146, 32, 3]))\n",
+      "(1, torch.Size([450, 32, 41]), torch.Size([1350, 32, 3]), torch.Size([1350, 32, 3]))\n",
+      "(2, torch.Size([731, 32, 41]), torch.Size([2193, 32, 3]), torch.Size([2193, 32, 3]))\n",
+      "(3, torch.Size([622, 32, 41]), torch.Size([1866, 32, 3]), torch.Size([1866, 32, 3]))\n"
      ]
     }
    ],
@@ -316,13 +361,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgn = RGN(100, 1, 'hardtanh', encoding)\n",
-    "rgn.load_state_dict(torch.load(data_path+'models/rgn.pt')) #load pretrained model\n",
+    "rgn = RGN(500, 1, 'hardtanh', encoding)\n",
+    "#rgn.load_state_dict(torch.load(data_path+'models/rgn_no_bn.pt')) #load pretrained model\n",
     "optimizer = torch.optim.Adam(rgn.parameters(), lr=1e-3)\n",
     "drmsd = dRMSD()"
    ]
@@ -336,38 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 160,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [00:41,  8.24s/it]\n",
-      "0it [00:00, ?it/s]"
+      "4it [00:36,  9.10s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Train Loss 8.78188972473\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "7it [00:17,  2.49s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Val Loss 8.25091075897\n",
+      "Epoch 0, Train Loss 39.637737751\n",
       "Finished Training\n"
      ]
     },
@@ -383,15 +420,16 @@
     "running_loss = 0.0\n",
     "\n",
     "for epoch in range(1):\n",
-    "    last_batch = 5 #len(trn_data) - 1\n",
+    "    last_batch = len(trn_data) - 1\n",
     "    for i, data in tqdm(enumerate(trn_data)):\n",
     "        names = data['name']\n",
     "        coords = data['coords']\n",
+    "        mask = data['mask']\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        outputs = rgn(data['sequence'], data['length'])\n",
     "\n",
-    "        loss = drmsd(outputs, coords)\n",
+    "        loss = drmsd(outputs, coords, mask)\n",
     "\n",
     "        loss.backward()\n",
     "        nn.utils.clip_grad_norm_(rgn.parameters(), max_norm=50)\n",
@@ -402,30 +440,31 @@
     "            print('Epoch {}, Train Loss {}'.format(epoch, running_loss/i))\n",
     "            running_loss = 0.0\n",
     "            break\n",
-    "    \n",
+    "    \"\"\"\n",
     "    last_batch = len(val_data) - 1\n",
     "    for i, data in tqdm(enumerate(val_data)):\n",
     "        names = data['name']\n",
     "        coords = data['coords']\n",
+    "        mask = data['mask']\n",
     "        \n",
     "        outputs = rgn(data['sequence'], data['length'])\n",
-    "        loss = drmsd(outputs, coords)\n",
+    "        loss = drmsd(outputs, coords, mask)\n",
     "\n",
     "        running_loss += loss.item()\n",
     "        if (i != 0) and (i % last_batch == 0):\n",
     "            print('Epoch {}, Val Loss {}'.format(epoch, running_loss/i))\n",
     "            running_loss = 0.0\n",
-    "\n",
+    "    \"\"\"\n",
     "print('Finished Training')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#torch.save(rgn.state_dict(), data_path+'models/rgn.pt')"
+    "#torch.save(rgn.state_dict(), data_path+'models/rgn_no_bn.pt')"
    ]
   }
  ],
